# NDKAuthExample

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/loc/kotlinassignmentproject/: AuthKeyInterceptorTest.kt  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aes.c  aes.h  base64.c  base64.h  native-crypto.cpp  native-lib.c
app/src/main/java/com/loc/kotlinassignmentproject/: App.kt  NativeLib.kt
app/src/main/java/com/loc/kotlinassignmentproject/crypto/: CryptoProvider.kt  NativeCrypto.kt
app/src/main/java/com/loc/kotlinassignmentproject/data/api/: ApiService.kt  AuthKeyInterceptor.kt  RetrofitProvider.kt
app/src/main/java/com/loc/kotlinassignmentproject/data/crypto/: CryptoStore.kt
app/src/main/java/com/loc/kotlinassignmentproject/data/model/: mode.kt
app/src/main/java/com/loc/kotlinassignmentproject/data/remote/: ApiService.kt  AuthInterceptor.kt
app/src/main/java/com/loc/kotlinassignmentproject/di/: NetworkModule.kt
app/src/main/java/com/loc/kotlinassignmentproject/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/loc/kotlinassignmentproject/ui/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/loc/kotlinassignmentproject/util/: Obfuscation.kt
app/src/main/java/com/loc/kotlinassignmentproject/utils/: Resource.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/loc/kotlinassignmentproject/: AuthKeyInterceptorTest.kt  ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
