cmake_minimum_required(VERSION 3.22.1)
project(apikeyencryption)

add_library(
        native-lib
        SHARED
        native-lib.c
        aes.c
)

find_library(
        log-lib
        log
)

target_link_libraries(
        native-lib
        ${log-lib}
)

target_include_directories(
        native-lib
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
)
